# AI_Transcription

./: .flake8  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  development.md  fieldContract.md  index.md  overview.md  usage.md
docs/module/: readers.md
src/ai_transcription/: main.py  output_v1_5_debug.txt  output_v1_5_debug2.txt
src/ai_transcription/core/: utils.py
src/ai_transcription/core/ai/: ai_client.py  llm_txt_v2_converter.py  prompt_builder.py  txt_to_json.py
src/ai_transcription/core/marker/: marked_line.py
src/ai_transcription/core/pipeline/: row_normalizer.py  section_marker.py
src/ai_transcription/core/readers/: excel_reader.py  word_reader.py
src/ai_transcription/core/writer/: debug_txt_writer.py
src/ai_transcription/data/input/: excelTotextv10.txt  excelTotextv15.txt  rowNormalize.txt  sample.docx  sample.xlsx  sample2.xlsx  sample3.xlsx  sample4.xls
src/ai_transcription/data/output/: output_v1_5_debug.txt  output_v2_debug.txt
tests/: test_utils.py
