[project]
name = "ai-transcription"
version = "0.1.0"
description = "AI resume transcription demo"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "openpyxl",
    "python-docx",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]